--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/ShashiS07/Scheduler#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^6.9.1",
+    "moment": "^2.29.4",
     "node-cron": "^3.0.2",
     "nodemon": "^2.0.20"
   }
